--- a/api/package.json
+++ b/api/package.json
@@ -9,5 +9,9 @@
     "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "build": "npm install"
   }
 }
